--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="title">
                 <h1>Leadership</h1>
-                <div>fernen urna a libero tempus</div>
+                <div class="color text">Fertenen urna a libero tempus</div>
             </div>
 
 
@@ -60,7 +60,7 @@
 
                     <img class="layout-img" src="img/img-1.jpg" alt="">
                     <h3>Lorem</h3>
-                    <div class="img-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae in earum obcaecati omnis cupiditate! Corrupti, ipsam. Illo aliquid eaque voluptas sequi, reprehenderit id enim? Incidunt sapiente ut blanditiis reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolor quam quis, ducimus sequi in veniam modi aspernatur, sapiente quae voluptatibus fugiat adipisci recusandae odio accusantium eum esse. Maxime, numquam.
+                    <div class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae in earum obcaecati omnis cupiditate! Corrupti, ipsam. Illo aliquid eaque voluptas sequi, reprehenderit id enim? Incidunt sapiente ut blanditiis reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolor quam quis, ducimus sequi in veniam modi aspernatur, sapiente quae voluptatibus fugiat adipisci recusandae odio accusantium eum esse. Maxime, numquam.
                     </div>
                 </div>
 
@@ -68,7 +68,7 @@
 
                     <img id="specialbanner" src="img/banner-2.jpg" alt="">
                     <h3>Ipsum</h3>
-                    <div class="img-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae in earum obcaecati omnis cupiditate! Corrupti, ipsam. Illo aliquid eaque voluptas sequi, reprehenderit id enim? Incidunt sapiente ut blanditiis reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolor quam quis, ducimus sequi in veniam modi aspernatur, sapiente quae voluptatibus fugiat adipisci recusandae odio accusantium eum esse. Maxime, numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus debitis porro iste quam! Ea a autem mollitia, totam distinctio veritatis illum suscipit earum rem iusto, impedit molestias, eum id eius. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa quas explicabo assumenda hic error eos quia ab dolorem? Omnis earum obcaecati adipisci odit eligendi eos iusto? Neque voluptates corrupti deserunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa quas explicabo assumenda hic error eos quia ab dolorem? Omnis earum obcaecati adipisci odit eligendi eos iusto? Neque voluptates corrupti deserunt!  Omnis earum obcaecati adipisci odit eligendi eos iusto? Neque voluptates corrupti deserunt!  Ipsa quas explicabo assumenda hic error eos quia ab dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus debitis porro iste quam! Ea a autem mollitia, totam distinctio veritatis illum suscipit earum rem iusto, impedit molestias, eum id eius. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    <div class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae in earum obcaecati omnis cupiditate! Corrupti, ipsam. Illo aliquid eaque voluptas sequi, reprehenderit id enim? Incidunt sapiente ut blanditiis reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolor quam quis, ducimus sequi in veniam modi aspernatur, sapiente quae voluptatibus fugiat adipisci recusandae odio accusantium eum esse. Maxime, numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus debitis porro iste quam! Ea a autem mollitia, totam distinctio veritatis illum suscipit earum rem iusto, impedit molestias, eum id eius. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa quas explicabo assumenda hic error eos quia ab dolorem? Omnis earum obcaecati adipisci odit eligendi eos iusto? Neque voluptates corrupti deserunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa quas explicabo assumenda hic error eos quia ab dolorem? Omnis earum obcaecati adipisci odit eligendi eos iusto? Neque voluptates corrupti deserunt!  Omnis earum obcaecati adipisci odit eligendi eos iusto? Neque voluptates corrupti deserunt!  Ipsa quas explicabo assumenda hic error eos quia ab dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus debitis porro iste quam! Ea a autem mollitia, totam distinctio veritatis illum suscipit earum rem iusto, impedit molestias, eum id eius. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
 
                     <img class="layout-img special" src="img/img-3.jpg" alt="">
                     <h3>Lorem</h3>
-                    <div class="img-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae in earum obcaecati omnis cupiditate! Corrupti, ipsam. Illo aliquid eaque voluptas sequi, reprehenderit id enim? Incidunt sapiente ut blanditiis reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolor quam quis, ducimus sequi in veniam modi aspernatur, sapiente quae voluptatibus fugiat adipisci recusandae odio accusantium eum esse. Maxime, numquam. 
+                    <div class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quae in earum obcaecati omnis cupiditate! Corrupti, ipsam. Illo aliquid eaque voluptas sequi, reprehenderit id enim? Incidunt sapiente ut blanditiis reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolor quam quis, ducimus sequi in veniam modi aspernatur, sapiente quae voluptatibus fugiat adipisci recusandae odio accusantium eum esse. Maxime, numquam. 
                     </div>
                 
                 </div>
